# bbc-microbit-v2-embassy-bsp

./: README.md
hello-gpio/: Cargo.toml
hello-gpio/src/: main.rs
hello-lsm303/: Cargo.toml
hello-lsm303/src/: main.rs
hello-lsm303/visualization/: main.py  visualization.pde
hello-world/: Cargo.toml
hello-world/src/: main.rs
hello_gpio/: Cargo.toml
hello_gpio/.cargo/: config.toml
hello_gpio/src/: main.rs
hello_world/: Cargo.toml
nrf52833/: Cargo.toml
