[package]
edition = "2021"
name = "hello-lsm303"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
# panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embassy-nrf = { version = "0.1.0", features = ["nrf52833", "time-driver-rtc1", "time"] }
rtt-target = "0.5.0"
embedded-hal-async = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.1"
panic-rtt-target = "0.1.3"
# panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
nb = "1.1"
bitflags = "2.3.3"
maybe-async-cfg = "0.2.4"

lsm303agr = "1.1.0"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2